testsuite/tests/typecheck/should_fail/tcfail154.stderr

tcfail154.hs:13:10: error:
    • Variable ‘a’ occurs more often
        in the constraint ‘C a a’ than in the instance head ‘Eq (T a)’
      (Use UndecidableInstances to permit this)
    • In the instance declaration for ‘Eq (T a)’
